card face spacing issue

--- a/scss/memory.scss
+++ b/scss/memory.scss
@@ -91,7 +91,7 @@ body {
       font-style: normal;
       font-size: 7vw;
       line-height: 0;
-      padding-top: 80%;
+      padding-top: 76%;
       background: $basecolor;
     }
     .back {
